criacao da pagina

--- a/index.html
+++ b/index.html
@@ -1,13 +1,122 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>StarCoffee</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
+
 <body>
-    
+    <header class="cabecalho">
+        <div class="logo-menu">
+            <img src="img/logo.png" alt="">
+            <nav>
+                <ul class="menu texto">
+                    <li><a href="">MENU</a> </li>
+                    <li><a href="">REWARDS</a> </li>
+                    <li><a href="">NOSSO CAFÉ</a> </li>
+                    <li><a href="">IMPACTO SOCIAL</a> </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="botoes-menu">
+            <a href="#" class="botao-loja"> Encontre uma loja</a>
+            <a href="#" class="botao-branco">Entrar</a>
+            <a href="#" class="botao-preto"> Participe agora</a>
+        </div>
+    </header>
+
+
+
+    <main class="main">
+        <img src="img/capasite.jpg" alt="">
+        <div class="card1">
+            <p>Conforme abrimos nossas lojas, permanecemos no compromisso com a saúde e bem-estar de nossos
+                partners e consumidores
+            </p>
+            <a href="#" class="botao-branco">Saiba mais</a>
+        </div>
+
+
+
+
+
+
+        <br>
+        <div class="card-imagem">
+            <img src="img/site1.jpg" alt="">
+            <div>
+                <h2>Voltando ao que amamos juntos</h2>
+                <br>
+                <p>Queridos clientes, partners e amigos, estamos acompanhando a situação atual do Brasil em
+                    relação ao COVID-19, focados na segurança e bem-estar dos nossos partners (Como <br>
+                    chamamos os nossos colaboradores) e clientes. Seguimos os critérios de quarentena de <br>
+                    cada municipio que temos lojas. As lojas abertas ou com estregas via delivery, através do <br>
+                    nosso parceiro Rappi, estão seguindo as orientações das autoridades de saúde.</p>
+                <a href="#" class="botao-branco">Baixe nosso APP e verifique as lojas em funcionamento</a>
+            </div>
+        </div>
+        <br>
+
+        <div class="card-imagem">
+            <div>
+                <h2>Saboreie uma pausa</h2>
+                <br>
+                <p> Saboreie uma pausa com uma das nossas bebidas</p>
+                <a href="#" class="botao-branco">Saiba mais</a>
+            </div>
+            <img src="img/site2.jpg" alt="">
+    </main>
+
+
+
+
+    <footer>
+        <hr>
+        <div class="lista1">
+            <ul class="">
+                <li>Nossa empresa</li>
+                <li>Nosso café</li>
+                <li>Atendimento ao cliente</li>
+                <li>Compliance e privacidade</li>
+                <li>Codigo de etica</li>
+            </ul>
+            <ul class="lista2">
+                <li>Central de carreira</li>
+            </ul>
+            <ul class="social">
+                <li>Comunidade</li>
+                <li>meio ambiente</li>
+                <li>fornecimento etico</li>
+                <li>Historia do starcoffee</li>
+            </ul>
+            <ul class="footer.politicas">
+                <li>baixe o aplicativo</li>
+                <li>termos e condicoes starcoffee</li>
+                <li>termos e condicoes giftcards</li>
+                <li>termos e condicoes das promoçoes</li>
+                <li>peca e pague</li>
+                <li>promocoes starcoffee</li>
+            </ul>
+        </div>
+            <br>
+            <div class="icones">
+                <img src="img/icon-spotify.svg" alt="">
+                <img src="img/icon-facebook.svg" alt="">
+                <img src="img/icon-linkedin.svg" alt="">
+                <img src="img/icon-instagram.svg" alt="">
+                <img src="img/icon-youtube.svg" alt="">
+                <img src="img/icon-twitter.svg" alt="">
+            </div>
+    </footer>
+
+
+
 </body>
+
 </html>
